fix: Prevent mobile zoom on input fields
- Update viewport meta tag to prevent mobile browser zoom
- Maintain readability while preventing automatic zoom behavior

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, maximum-scale=1.0, user-scalable=no">
   <title data-lang="title">Web3RealtorFL - Your Florida Property Match</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
   <style>
@@ -2370,7 +2370,7 @@
         submit: "今すぐ私の専門エージェントを見つけよう",
         footer: "Web3RealtorFL提供 - 不動産とブロックチェーンをつなぐ",
         thank_you: "ご提出ありがとうございます！エージェントがまもなくご連絡いたします。",
-        ok: "OK",
+        ok: "確認",
         select_language: "選択する言語",
         lang_english: "英語",
         lang_spanish: "スペイン語",
@@ -2385,7 +2385,7 @@
         lang_swedish: "スウェーデン語",
         lang_korean: "韓国語",
         submitting: "送信中...",
-        please_fill_name_email: "お名前とメールアドレスを入力してください",
+        please_fill_name_email: "お名前とメールアドレスを入力してください。",
         kw_link: "あなたの夢の家を見つけて",
         kw_text: "信頼できる不動産パートナーです。",
         propy_link: "Propy",
@@ -2395,7 +2395,7 @@
         updraft: "Updraft",
         your_courses: "あなたのコース",
         web3_text: "不動産のブロックチェーンを学びましょう。",
-        foreclosure_link: "無料の競売/ショートセールリソース",
+        foreclosure_link: "無料の競売/短期販売リソース",
         foreclosure_text: "NARからサポートと情報を得る",
         using_crypto: "暗号通貨を使用"
       },
@@ -2563,7 +2563,7 @@
         type_renter: "임차인",
         type_landlord: "임대인",
         type_investor: "투자자",
-        details: "당신의 필요에 대한 몇 가지 세부 사항을 공유해 주세요 (위치, 일정, 예산 등)",
+        details: "당신의 필요에 대한 몇 가지 세부 사항을 공유해 주세요 (위치, 시간표, 예산 등)",
         dropdown_btn: "매칭 향상 – 더 스마트한 적합성을 위해 세부 사항 추가 +",
         intake_title: "고객 정보 수집",
         client_type: "고객 유형",
@@ -2592,7 +2592,7 @@
         pref_lender: "선호하는 대출 기관:",
         have_lender: "가지고 있음",
         need_lender: "추천 필요",
-        timeline: "일정:",
+        timeline: "시간표:",
         immediate: "즉시",
         "1_3_months": "1-3개월",
         "3_6_months": "3-6개월",
@@ -2622,7 +2622,7 @@
         no_pref_bath: "선호 없음",
         square_footage: "선호하는 평수",
         locations: "선호하는 위치/동네",
-        must_haves: "필수 기능:",
+        must_haves: "Must-Have-Мерkmale:",
         garage: "차고",
         basement: "지하실",
         pool: "수영장",
