--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
       }
     }
     .web3-bold {
-      font-weight: 700;
+      font-weight: 600;
     }
   </style>
 </head>
@@ -508,7 +508,10 @@
           <option value="Landlord" data-lang="type_landlord">Landlord</option>
           <option value="Investor" data-lang="type_investor">Investor</option>
         </select>
-        <textarea name="entry.928741499" data-lang="details" placeholder="Please share some details about your needs (location, timeline, budget, etc.)"></textarea>
+        <div class="form-group">
+          <label for="details" data-lang="details_label">Details</label>
+          <textarea name="entry.928741499" data-lang="details" placeholder="Where, when, budget, Crypto/Traditional"></textarea>
+        </div>
         
         <div class="form-group" style="text-align: left;">
           <label class="checkbox-label" for="using_crypto">
@@ -896,7 +899,7 @@
         type_renter: "Renter",
         type_landlord: "Landlord",
         type_investor: "Investor",
-        details: "Please share some details about your needs (location, timeline, budget, etc.)",
+        details: "(where, when, budget, Crypto/Traditional) – Want better, faster results? Fill out the form below for expert-level matching!",
         dropdown_btn: "Enhance Your Match – Add More Details for a Smarter Fit +",
         intake_title: "Client Intake Information",
         client_type: "Client Type",
@@ -1050,8 +1053,8 @@
         type_renter: "Locatario",
         type_landlord: "Arrendador",
         type_investor: "Inversionista",
-        details: "Por favor, comparte algunos detalles sobre tus necesidades (ubicación, cronograma, presupuesto, etc.)",
-        dropdown_btn: "Mejora tu coincidencia – Agrega más detalles para un mejor ajuste +",
+        details: "(dónde, cuándo, presupuesto, Cripto/Tradición) – ¿Quieres mejores y más rápidos resultados? ¡Completa el formulario abajo para una coincidencia de nivel experto!",
+        dropdown_btn: "Mejora tu coincidencia – Agrega más detalles para una coincidencia más inteligente +",
         intake_title: "Información de ingreso del cliente",
         client_type: "Tipo de cliente",
         first_time: "Primera vez",
@@ -1195,7 +1198,7 @@
       },
       zh: {
         title: "解锁您的佛罗里达房产",
-        subtitle: "由佛罗里达州持牌专家和<span class='web3-bold'>Web3</span>赋能的免费快速代理匹配",
+        subtitle: "由佛罗里达州许可专家和<span class='web3-bold'>Web3</span>赋能的免费快速代理匹配",
         name: "您的姓名",
         email: "您的电子邮件",
         type_select: "购买者、卖家、租户、房东、投资者",
@@ -1204,8 +1207,8 @@
         type_renter: "租户",
         type_landlord: "房东",
         type_investor: "投资者",
-        details: "请分享您需求的详细信息（位置、时间表、预算等）",
-        dropdown_btn: "提升匹配度 – 添加更多细节以获得更智能的匹配 +",
+        details: "(地点、时间、预算、加密/传统) – 想要更好、更快的结果？填写下面的表格以获得专家级匹配！",
+        dropdown_btn: "增强匹配度 – 添加更多详细信息以获得更智能的匹配 +",
         intake_title: "客户信息采集",
         client_type: "客户类型",
         first_time: "首次购房者",
@@ -1231,10 +1234,10 @@
         in_process: "处理中",
         pre_approval_amount: "预批金额（如适用）",
         pref_lender: "首选贷款机构：",
-        have_lender: "已有贷款机构",
+        have_lender: "已有",
         need_lender: "需要推荐",
         timeline: "时间表：",
-        immediate: "立即",
+        immediate: "即时",
         "1_3_months": "1-3个月",
         "3_6_months": "3-6个月",
         "6_plus_months": "6个月以上",
@@ -1358,8 +1361,8 @@
         type_renter: "مستأجر",
         type_landlord: "مالك",
         type_investor: "مستثمر",
-        details: "يرجى مشاركة بعض التفاصيل حول احتياجاتك (الموقع، الجدول الزمني، الميزانية، إلخ)",
-        dropdown_btn: "تحسين مطابقتك – أضف المزيد من التفاصيل لتناسب أفضل +",
+        details: "(أين، متى، الميزانية، كريبتو/تقليدي) – هل تريد نتائج أفضل وأسرع؟ املأ النموذج أدناه لمطابقة على مستوى الخبراء!",
+        dropdown_btn: "تحسين التطابق – أضف المزيد من التفاصيل للحصول على تطابق أكثر ذكاءً +",
         intake_title: "معلومات استقبال العميل",
         client_type: "نوع العميل",
         first_time: "المرة الأولى",
@@ -1367,11 +1370,11 @@
         contact_prefs: "تفضيلات الاتصال",
         pref_contact_method: "طريقة الاتصال المفضلة：",
         phone: "هاتف",
-        text: "رسالة نصية",
+        text: "نص",
         best_time: "أفضل وقت للاتصال：",
-        morning: "صباحًا",
-        afternoon: "مساءً",
-        evening: "مساءً",
+        morning: "صباح",
+        afternoon: "مساء",
+        evening: "مساء",
         weekend: "عطلة نهاية الأسبوع",
         phone_number: "رقم الهاتف",
         address: "العنوان الحالي",
@@ -1512,13 +1515,13 @@
         type_renter: "Арендатор",
         type_landlord: "Арендодатель",
         type_investor: "Инвестор",
-        details: "Пожалуйста, поделитесь некоторыми деталями о ваших потребностях (местоположение, сроки, бюджет и т.д.)",
-        dropdown_btn: "Улучшите совпадение – Добавьте больше деталей для более умной совместимости +",
-        intake_title: "Информация о клиенте",
+        details: "(где, когда, бюджет, Крипто/Традиция) – Хотите лучших и быстрых результатов? Заполните форму ниже для подбора на уровне экспертов!",
+        dropdown_btn: "Улучшить совпадение – Добавить больше деталей для более умного совпадения +",
+        intake_title: "Кунденафта информация",
         client_type: "Кундентип",
-        first_time: "Впервые",
+        first_time: "Первый раз",
         relocating: "Переезд",
-        contact_prefs: "Предпочтения по контакту",
+        contact_prefs: "Контактные предпочтения",
         pref_contact_method: "Предпочитаемый способ связи:",
         phone: "Телефон",
         text: "Текст",
@@ -1666,8 +1669,8 @@
         type_renter: "Locatário",
         type_landlord: "Proprietário",
         type_investor: "Investidor",
-        details: "Por favor, compartilhe alguns detalhes sobre suas necessidades (localização, cronograma, orçamento, etc.)",
-        dropdown_btn: "Melhore seu match – Adicione mais detalhes para um ajuste mais inteligente +",
+        details: "(onde, quando, orçamento, Cripto/Tradução) – Quer resultados melhores e mais rápidos? Preencha o formulário abaixo para uma correspondência de nível especialista!",
+        dropdown_btn: "Aprimore seu emparelhamento – Adicione mais detalhes para um emparelhamento mais inteligente +",
         intake_title: "Informações de entrada do cliente",
         client_type: "Tipo de cliente",
         first_time: "Primeira vez",
@@ -1799,7 +1802,7 @@
         kw_link: "Encontre sua casa dos sonhos com",
         kw_text: "Seu parceiro confiável em imóveis.",
         propy_link: "Propy",
-        propy_text: "Transações imobiliárias e de títulos simplificadas com tecnologia blockchain.",
+        propy_text: "Transações imobiliárias e titulos simplificadas com tecnologia blockchain.",
         web3_education: "Educação Web3:",
         cyrin: "Cyrin",
         updraft: "Updraft",
@@ -1820,8 +1823,8 @@
         type_renter: "Locataire",
         type_landlord: "Propriétaire",
         type_investor: "Investisseur",
-        details: "Veuillez partager quelques détails sur vos besoins (emplacement, calendrier, budget, etc.)",
-        dropdown_btn: "Améliorez votre correspondance – Ajoutez plus de détails pour un meilleur ajustement +",
+        details: "(où, quand, budget, Crypto/Traditionnel) – Voulez-vous de meilleurs résultats plus rapides ? Remplissez le formulaire ci-dessous pour un matching expert !",
+        dropdown_btn: "Améliorez votre correspondance – Ajoutez plus de détails pour une correspondance plus intelligente +",
         intake_title: "Informations d'admission du client",
         client_type: "Type de client",
         first_time: "Première fois",
@@ -1974,7 +1977,7 @@
         type_renter: "Affittuario",
         type_landlord: "Proprietario",
         type_investor: "Investitore",
-        details: "Per favore, condividi alcuni dettagli sulle tue esigenze (posizione, tempistiche, budget, ecc.)",
+        details: "(dove, quando, budget, Cripto/Tradizionale) – Vuoi risultati migliori e più veloci? Compila il modulo qui sotto per un abbinamento di livello esperto!",
         dropdown_btn: "Migliora il tuo abbinamento – Aggiungi più dettagli per un abbinamento più intelligente +",
         intake_title: "Informazioni di accoglienza del cliente",
         client_type: "Tipo di cliente",
@@ -2128,8 +2131,8 @@
         type_renter: "Mieter",
         type_landlord: "Vermieter",
         type_investor: "Investor",
-        details: "Bitte teilen Sie einige Details zu Ihren Bedürfnissen mit (Standort, Zeitplan, Budget usw.)",
-        dropdown_btn: "Verbessere deine Zuordnung – Füge mehr Details hinzu für eine bessere Anpassung +",
+        details: "(wo, wann, Budget, Krypto/Traditionell) – Möchten Sie bessere, schnellere Ergebnisse? Füllen Sie das Formular unten für eine Experten-Zuordnung aus!",
+        dropdown_btn: "Verbessern Sie Ihre Zuordnung – Fügen Sie mehr Details hinzu für eine intelligenteren Zuordnung +",
         intake_title: "Kundenaufnahmeinformationen",
         client_type: "Kundentyp",
         first_time: "Erstmalig",
@@ -2203,7 +2206,7 @@
         move_in_ready: "Bezugsfertig",
         fixer_upper: "Renovierungsbedürftig OK",
         other_features: "Andere Merkmale",
-        deal_breakers: "Kritische Faktoren",
+        deal_breakers: "Deal Breakers",
         sellers_landlords: "Für Verkäufer/Vermieter",
         property_address: "Immobilienadresse",
         year_built: "Baujahr",
@@ -2273,7 +2276,7 @@
       },
       ja: {
         title: "あなたのフロリダの不動産を解放",
-        subtitle: "フロリダ州許可取得済み専門家と<span class='web3-bold'>Web3</span>による無料・高速エージェントマッチング",
+        subtitle: "ライセンス取得済みFL専門家と<span class='web3-bold'>Web3</span>による無料・高速エージェントマッチング",
         name: "あなたの名前",
         email: "あなたのメール",
         type_select: "購入者、売却者、賃借人、大家、投資家",
@@ -2282,8 +2285,8 @@
         type_renter: "賃借人",
         type_landlord: "大家",
         type_investor: "投資家",
-        details: "あなたのニーズに関する詳細（位置、時間枠、予算など）を共有してください",
-        dropdown_btn: "マッチングを強化 – よりスマートなフィットのために詳細を追加 +",
+        details: "(どこ、いつ、予算、暗号/伝統) – より良く速い結果を望みますか？下のフォームに記入して専門家レベルのマッチングを得ましょう！",
+        dropdown_btn: "マッチングを強化 – よりスマートなマッチングのために詳細を追加 +",
         intake_title: "クライアント情報収集",
         client_type: "クライアントタイプ",
         first_time: "初めて",
@@ -2367,7 +2370,7 @@
         estimated_value: "推定価値",
         sell_reason: "売却/出借の理由：",
         upgrading: "アップグレード",
-        downsizing: "ダウンサイズ",
+        downsizing: "ダウンサイジング",
         investment: "投資",
         financial: "財務",
         other_reason: "その他の理由",
@@ -2436,8 +2439,8 @@
         type_renter: "Hyresgäst",
         type_landlord: "Hyresvärd",
         type_investor: "Investerare",
-        details: "Dela gärna några detaljer om dina behov (plats, tidsram, budget, etc.)",
-        dropdown_btn: "Förbättra din matchning",
+        details: "(var, när, budget, Krypto/Traditionell) – Vill du ha bättre och snabbare resultat? Fyll i formuläret nedan för expertmatchning!",
+        dropdown_btn: "Förbättra din matchning – Lägg till fler detaljer för en smartare matchning +",
         intake_title: "Kundintagsinformation",
         client_type: "Kundtyp",
         first_time: "Förstagångs",
@@ -2589,8 +2592,8 @@
         type_renter: "임차인",
         type_landlord: "임대인",
         type_investor: "투자자",
-        details: "당신의 필요에 대한 몇 가지 세부 사항을 공유해 주세요 (위치, 시간표, 예산 등)",
-        dropdown_btn: "매칭 향상 – 더 스마트한 적합성을 위해 세부 사항 추가 +",
+        details: "(어디, 언제, 예산, 암호화/전통) – 더 나은, 더 빠른 결과를 원하세요? 아래 양식을 작성하여 전문가 수준의 매칭을 받으세요!",
+        dropdown_btn: "매칭 향상 – 더 똑똑한 매칭을 위해 자세한 정보 추가 +",
         intake_title: "고객 정보 수집",
         client_type: "고객 유형",
         first_time: "첫 구매자",
@@ -2607,7 +2610,7 @@
         phone_number: "전화번호",
         address: "현재 주소",
         financial_info: "재무 정보",
-        income: "연간 가구 소득",
+        income: "년간 가구 소득",
         budget_min: "예산 최소 ($)",
         budget_max: "예산 최대 ($)",
         pre_approved: "모기지 사전 승인 여부?",
@@ -2689,7 +2692,7 @@
         issues: "부동산의 알려진 문제",
         additional_info: "추가 정보",
         how_heard: "어떻게 우리를 알게 되었나요?",
-        referral: "추천",
+        referral: "소개",
         website: "웹사이트",
         social_media: "소셜 미디어",
         sign: "간판",
@@ -2836,22 +2839,6 @@
       } else {
         content.style.display = "block";
       }
-    }
-
-    document.addEventListener('DOMContentLoaded', function() {
-      const popup = document.getElementById("thankYouPopup");
-      if (popup) {
-        popup.style.display = "none";
-      }
-    });
-
-    let languageDropdownOpen = false;
-    const moreLanguages = document.querySelector('.more-languages');
-    const languageDropdown = document.querySelector('.language-dropdown');
-
-    function toggleLanguageDropdown() {
-      languageDropdownOpen = !languageDropdownOpen;
-      languageDropdown.style.display = languageDropdownOpen ? 'block' : 'none';
     }
 
     // Close dropdown when clicking outside
